Git repo added to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "description": "Compile LaTeX in etherpads to PDF",
   "main": "main.js",
   "_id": "ep_latex@0.0.1",
-  "readme": "ERROR: No README.md file found!",
   "_from": "ep_latex"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/manuels/ep_latex.git"
+  },
 }
